cabal-version:       >=1.10
name:                events
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     KeyedVector
                       EventLog
                       Mean
                       Bin
                       Time
  build-depends:       base >=4.12 && <4.13,
                       containers,
                       linear,
                       machines,
                       ghc-events,
                       transformers,
                       vector,
                       vector-algorithms,
                       vector-th-unbox
  hs-source-dirs:      src
  default-language:    Haskell2010

executable events
  main-is:             Main.hs
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13,
                       bytestring,
                       linear,
                       colour,
                       diagrams-lib,
                       diagrams-svg,
                       machines,
                       ghc-events,
                       events
  default-language:    Haskell2010
